refactor: Rename project to Monochrome Calculator
Updates project name, metadata, and styling to reflect the new "Monochrome Calculator" theme. This includes removing glassmorphism effects and adopting a high-contrast black and white color scheme.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glassmorphic-calculator",
+  "name": "monochrome-calculator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
